test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/compare_pointer_to_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  *
  identifier(l)
  =
  const int(0)
  ;
  return
  identifier(l)
  <=
  const unsigned long(100ul)
  ;
  }
